--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,11 @@ div {
     margin-top: 2px;
 }
 
+.info{
+    background: #FF0000;
+    color: #ffffff;
+}
+
 .leftContainer{
     flex: 1;
     flex-direction: column;
